chore: clean unused config and hostility code paths